--- a/style.css
+++ b/style.css
@@ -724,12 +724,12 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
   color: #0366d6;
 }
 
-.hfg-item-left #secondary-menu li:not(:last-child), .hfg-item-center #secondary-menu li:not(:last-child) {
-  margin-right: 20px;
+.header-menu-sidebar .hfg-item-right #secondary-menu {
+  align-items: flex-end;
 }
 
-.hfg-item-right #secondary-menu li:not(:first-child) {
-  margin-left: 20px;
+.header-menu-sidebar .hfg-item-center #secondary-menu {
+  align-items: center;
 }
 
 ul[id^="nv-primary-navigation"] i {
@@ -2125,6 +2125,12 @@ audio {
   }
   .nv-empty-sidebar .neve-main > .container .col {
     max-width: 100%;
+  }
+  .hfg-item-left #secondary-menu li:not(:last-of-type), .hfg-item-center #secondary-menu li:not(:last-of-type) {
+    margin-right: 20px;
+  }
+  .hfg-item-right #secondary-menu li:not(:first-of-type) {
+    margin-left: 20px;
   }
   .hfg-item-left .header--row .primary-menu-ul li:not(:last-child), .hfg-item-center .header--row .primary-menu-ul li:not(:last-child) {
     margin-right: 20px;
